fixed missing color variable

--- a/app/static_src/less/partials/style.less
+++ b/app/static_src/less/partials/style.less
@@ -671,7 +671,7 @@ textarea{
 }
 
 .font_pink {
-    color: @pink;
+    color: #E83B59;
 }
 
 .font-dimgray {
